2015-07-03  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 0.11.0 released
        =========================

        Rename GSkymap to GSkyMap
        Add binary operators to GSkymap class
        GSkymap::operator/=(GSkymap) operator now ignores division by zero
        Remove deadtime correction from GCTAModelCubeBackground (#1503)
        Add GCTAObservation::object() method
        Correct model gradient computation
        Correct check of pixel containment in sky map (GSkymap::contains())
        Do only search in users pfiles if PFILES environment variable is not set
        Correct GModelSpatialDiffuseConst::mc() method (#1480)
        Add is_valid() method to GCTARoi and write keywords only if ROI is valid (#1476)
        Increased number of integration iterations for energy dispersion (#1472)
        Add GOptimizerLM::logger() method, logger constructor takes pointer (#1471)
        Replaced fixed precision integration by fixed iterations (#1466)
        Implement rejection method for skymap Monte Carlo (#1465)


2015-05-22  Juergen Knoedlseder  <jurgen.knodlseder@irap.omp.eu>

        * Version 0.10.0 released
        =========================

        Add optional PHASE information to CTA event lists
        Use URL path informtion in GVOClient connection to Hub
        Ignore empty string parameters in GModel::is_valid()
        Add some constructors
        Add classname methods to Python interface (#1321)
        Rename CTA cube analysis classes (#1269)
        Do not dump unqueried parameters (#1349)
        Add GBilinear class
        Add WCS projections (MOL)
        Add GXmlElement::has_attribute() method
        Add GSkymap scaling operators (#1296)
        Add GSkymap::extract() method (#1442)
        Implement GApplicationPar range checking (#285)
        Forbid appending to text, comment and PI XML nodes (#804)
        Increase precision for diffuse model Npred computation (#1248)